--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 				alt=""
 				class="image-2"
 			/>
-			<h1 class="heading-3">0xscat</h1>
+			<h1 class="heading-3">0x8403a2bbef48d30e98d7590f80d20b0b350fba20</h1>
 		</div>
 		<div>
 			<h1 class="heading-4">COMMUNITY POWER</h1>
