--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 			<div>
 				<h1 class="heading">$SCAT - FUTURE OF SHITCOIN FINANCE</h1>
 				<div class="div-block-3">
-					<a href="https://lambos-amazing-site.webflow.io/#" class="link"
+					<a href="https://app.uniswap.org/#/swap?outputCurrency=0x8403a2bbef48d30e98d7590f80d20b0b350fba20" class="link"
 						>🦄🦄</a
 					>
 				</div>
